apps/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: auth
  labels:
    app: pocket-id
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.6.2
          ports:
            - containerPort: 1411
          volumeMounts:
            - name: pocket-id-pvc
              mountPath: /data/uploads
      volumes:
        - name: pocket-id-pvc
          persistentVolumeClaim:
            claimName: pocket-id-pvc
