apps/pocket-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id-ingress
  namespace: auth
  annotations:
    glance/icon: di:pocket-id
    glance/name: "Pocket ID"
    glance/url: https://id.realtong.cn
    nginx.ingress.kubernetes.io/auth-signin-redirect-param: redirect_uri
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - id.realtong.cn
  rules:
    - host: id.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 1411
